프로토타입 수정

--- a/Documents/주현종 프로토타입(머지x)/join.css
+++ b/Documents/주현종 프로토타입(머지x)/join.css
@@ -74,8 +74,8 @@ main h4{margin-bottom: 30px;}
 #joinBox{width: 800px; height: 800px; border: 1px solid #111; }
 
 
-.text{margin-left: 60px; float: left;}
-
+.text{margin-left: 60px;  float: left;}
+.textBox
 
 input[type=text]{
     width:177px;
