--- a/Project/src/main/webapp/css/product.css
+++ b/Project/src/main/webapp/css/product.css
@@ -58,7 +58,7 @@ input[type="submit"] {
     border: none;
     background: aliceblue;
 }
-/*
+/* 겹치는 부분 숨김처리
 	table {
  	   margin: 0 auto;
 	} 
@@ -69,16 +69,17 @@ input[type="submit"] {
 /* product_DetailView */
 
 .is{
-    height: 450px;
-    margin: 40px 0 350px 0px;   
+    height: 700px;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 .mImage{
     border:1px solid lightgrey; 
     width:500px; 
     height:430px; 
-    float:left; 
-    margin-right:10px;
+    float:left;
+    margin: 0px 10px 0px auto;
     text-align: center;
     display: block;
     position: relative;
@@ -124,9 +125,14 @@ input[type="submit"] {
     text-align: center;
 }
 
+.tab2, .tab3 {
+	margin: 0;
+}
+
 .tab_content {
 	padding: 30px;
 }
+
 
 .tab_content > ul {
 	font-size: initial;
@@ -135,10 +141,12 @@ input[type="submit"] {
 	flex-direction: row;
 	justify-content: center;
     align-items: center;
+    margin: 0 auto;
 	
 	max-width: 900px;
 	width: 100%
 }
+
 
 .tab_content > ul > li {
 	display: inline-block;
@@ -147,6 +155,7 @@ input[type="submit"] {
 	border: 1px solid #efefef;
 	font-size: 15px;
 	coursor: pointer;
+	width: 400px;
 	
 	-webkit-transition: background-color 0.3s linear;
     -moz-transition: background-color 0.3s linear;
@@ -203,7 +212,7 @@ input[type="radio"]:checked + label {
 
 /* product_Modify */
 
-/*
+/* 겹치는 태그 정리 
 	table {
     	margin: 0 auto;
 	} 
