--- a/Project/src/main/webapp/css/product.css
+++ b/Project/src/main/webapp/css/product.css
@@ -91,20 +91,31 @@ input[type="submit"] {
     transform: translate(-50%, -50%);
     width: 270px;
 }
+
+#result {
+	width: 50px; 
+	height:36px; 
+	text-align:center; 
+	float:left; 
+	border: 1px solid black;
+	background-color: white;
+	align: center;
+}
+
 .trs{
-    height:2.5rem;
+    height:3rem;
 }
 
 .bDiv>button {
     padding:20px;
 }
 
-.but1{
+.but1, .but2{
     height: 18px;
     width: 30px;
 }
 
-#but2 {
+#butt2 {
     margin-right: 10px;
     width: 130px;
     border-color: grey;
