상품후기, 일부 코드 수정
회원가입시 정해진 양식 아니면 컷
상품후기 프로토타입

--- a/Project/src/main/webapp/css/join.css
+++ b/Project/src/main/webapp/css/join.css
@@ -32,6 +32,10 @@ input[type=email]{
 input[type=text]{
     width:160px; height: 23px;
 }
+
+input[type=number]{
+    width:160px; height: 23px;
+}
 .textBox_submit input{
     width:120px;
     height:40px;
