--- a/Project/src/main/webapp/css/review1.css
+++ b/Project/src/main/webapp/css/review1.css
@@ -1,16 +1,19 @@
 @charset "UTF-8";
 
 
+
 .inner_member2{
     width: 800px; margin: 0 auto;
 }
 #reviewBox{margin-bottom: 50px; width: 800px; height: 70px; }
 #textarea{width: 600px; height: 70px; float: left; font-size: 17px;}
-#submitBt{width: 100px; height: 50px; margin-left: 100px; float: right; margin-top: 10px;}
+#submitBt{width: 100px; height: 50px; margin-left: 100px; float: right; margin-top: 10px; padding:0px}
 
 
 #idBox{width: 150px; height: 30px; line-height: 30px; text-align: center; border: 1px solid #111; margin-bottom: 1px; font-weight: bold;}
-.reviewarea{width: 600px; height: 70px; float: left; font-size: 17px;}
+.reviewarea{width: 600px; height: 70px; float: left; font-size: 17px; border: 1px solid #111; text-align: left; word-wrap: break-word;}
 
 #review_modifyBox{float: right;}
 .reviewBt{width: 47px; height: 30px; margin-top: 20px;}
+
+.reviewBox2{margin-bottom: 100px;}
