--- a/Project/src/main/webapp/css/base.css
+++ b/Project/src/main/webapp/css/base.css
@@ -20,7 +20,7 @@ header{padding-top: 20px;}
 #category{width: 1200px; height: 70px;}
 #category > li{
     width: 150px; height: 74px; display: inline-block; text-align: center; 
-    line-height: 70px; position: relative;}
+    line-height: 70px; position: relative; z-index: 999;}
 #category > li > a{font-size: 16px; font-weight: bold;}
 #category > li::before{
     content: '|'; width: 1.3px; height: 20px ; background-color: #999; 
