--- a/Project/src/main/webapp/css/product.css
+++ b/Project/src/main/webapp/css/product.css
@@ -86,6 +86,7 @@ input[type="submit"] {
     height: 700px;
     width: 1200px;
     margin: 0 auto;
+    margin-top:80px
 }
 
 .mImage{
@@ -103,7 +104,8 @@ input[type="submit"] {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 270px;
+    width: 100%;
+    /* width: 270px; */
 }
 
 #result {
@@ -114,6 +116,7 @@ input[type="submit"] {
 	border: 1px solid black;
 	background-color: white;
 	align: center;
+	line-height: 36px;
 }
 
 .trs{
@@ -265,3 +268,4 @@ input[type="radio"]:checked + label {
     border: none;
     background: aliceblue;
 }
+
