메인 페이지 크기 조정
 - base height 수정
 - 상품 리스트 수정

--- a/Project/src/main/webapp/css/product/list.css
+++ b/Project/src/main/webapp/css/product/list.css
@@ -83,7 +83,7 @@ input[type="submit"] {
 /* product_DetailView */
 
 .is{
-    height: 550px;
+    height: auto;
     width: 1200px;
     margin: 0 auto;
     margin-top:80px
