--- a/Project/src/main/webapp/css/base.css
+++ b/Project/src/main/webapp/css/base.css
@@ -41,7 +41,7 @@ header{padding-top: 20px;}
     width: 1920px; height: 1px; background-color: #dfe0e2; border: 0; 
 }
 main{
-    height: 1200px;
+    height: auto;
     margin: 0 auto;
 } /*임시 값*/ 
 
