--- a/Project/src/main/webapp/css/product/list.css
+++ b/Project/src/main/webapp/css/product/list.css
@@ -300,16 +300,32 @@ input[type="radio"]:checked + label {
 
 #adminOption a{
 	width: 397px;
-    height: 80px;
+    height: 50px;
     border: 1px solid lightgrey;
     display: inline-block;
     text-align: center;
-    line-height: 80px;
+    line-height: 50px;
     font-size: 20px;
     font-weight: bold;
 }
 
 #adminOption a:hover{
+	box-shadow: 5px 5px 5px rgba(0,0,0,0.2); 
+	border:1px solid  #8b283d;
+	background-color: #8b283d;
+	color: #fff;
+}
+
+.butt2{border: 1px solid lightgrey;
+    width: 200px;
+    display: inline-block;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-weight: bold;
+    }
+    
+.butt2:hover{
 	box-shadow: 5px 5px 5px rgba(0,0,0,0.2); 
 	border:1px solid  #8b283d;
 	background-color: #8b283d;
