--- a/Project/src/main/webapp/css/product.css
+++ b/Project/src/main/webapp/css/product.css
@@ -307,6 +307,7 @@ input[type="radio"]:checked + label {
     line-height: 50px;
     font-size: 20px;
     font-weight: bold;
+    margin-left: 201px;
 }
 
 #adminOption a:hover{
